--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -16,7 +16,7 @@
             <ul>   
                 <li><a href="about.html">Sobre Nosotros</a></li>
                 <li><a href="products.html">Productos</a></li>
-                <li><a href="gallery.html">Galería</a></li>
+                <li><a href="gallery.html">Galería jeje</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="Usuarios.html">Registro Usuarios</a></li>
             </ul>
