--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Dulce Tentación - Inicio</title>
+    <title>Dulce Tentación - Inicio0</title>
     <link rel="stylesheet" href="/Dulceria/Devops/css/styles.css">
 </head>
 <body>
