Se realiza ajustes de rutas de js src

--- a/Devops/html/contact.html
+++ b/Devops/html/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dulce Tentación - Contacto</title>
-    <link rel="stylesheet" href="/Dulceria/Devops/css/styles.css">
-    <script src="/Dulceria/Devops/js/Validaciones_Contactos.js" defer></script>
+    <link rel="stylesheet" href="/Dulceria_Equipo5/Devops/css/styles.css">
+    <script src="/Dulceria_Equipo5/Devops/js/Validaciones_Contactos.js" defer></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/Dulceria/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
+            <img src="/Dulceria_Equipo5/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
         </div>
         <nav>
             <ul>
@@ -26,7 +26,7 @@
 
     <section class="contact" style="text-align: center;">
         <h2>Contacto</h2>
-        <form id="formularioContacto" action="/Dulceria/Devops/php/Contacto.php" method="POST">
+        <form id="formularioContacto" action="/Dulceria_Equipo5/Devops/php/Contacto.php" method="POST">
             <label for="Nombre">Nombre:</label><br>
             <input type="text" id="Nombre" name="Nombre" ><br><br>
 
