--- a/Devops/html/products.html
+++ b/Devops/html/products.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dulce Tentación - Productos</title>
-    <link rel="stylesheet" href="/Dulceria/Devops/css/styles.css">
+    <link rel="stylesheet" href="/Dulceria_Equipo5/Devops/css/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/Dulceria/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
+            <img src="/Dulceria_Equipo5/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
         </div>
         <nav>
             <ul>
@@ -27,27 +27,27 @@
         <h2>Nuestros Productos</h2>
         <div class="product-grid">
             <div class="product">
-                <img src="/Dulceria/Devops/src/Chocolates.jpg" alt="Chocolates Artesanales">
+                <img src="/Dulceria_Equipo5/Devops/src/Chocolates.jpg" alt="Chocolates Artesanales">
                 <p>Chocolates Artesanales</p>
             </div>
             <div class="product">
-                <img src="/Dulceria/Devops/src/Paletas.jpg" alt="Paletas de Sabores Exóticos">
+                <img src="/Dulceria_Equipo5/Devops/src/Paletas.jpg" alt="Paletas de Sabores Exóticos">
                 <p>Paletas de Sabores Exóticos</p>
             </div>
             <div class="product">
-                <img src="/Dulceria/Devops/src/bombones.jpg" alt="Bombones de Crema">
+                <img src="/Dulceria_Equipo5/Devops/src/bombones.jpg" alt="Bombones de Crema">
                 <p>Bombones de Crema</p>
             </div>
             <div class="product">
-                <img src="/Dulceria/Devops/src/gomitas.jpg" alt="Gomitas de Frutas">
+                <img src="/Dulceria_Equipo5/Devops/src/gomitas.jpg" alt="Gomitas de Frutas">
                 <p>Gomitas de Frutas</p>
             </div>
             <div class="product">
-                <img src="/Dulceria/Devops/src/dulces.jpg" alt="Caramelos Clásicos">
+                <img src="/Dulceria_Equipo5/Devops/src/dulces.jpg" alt="Caramelos Clásicos">
                 <p>Caramelos Clásicos</p>
             </div>
             <div class="product">
-                <img src="/Dulceria/Devops/src/bombones de dulce.jpg" alt="Malvaviscos de Colores">
+                <img src="/Dulceria_Equipo5/Devops/src/bombones de dulce.jpg" alt="Malvaviscos de Colores">
                 <p>Malvaviscos de Colores</p>
             </div>
         </div>
