--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <title>Dulce Tentación - Inicio</title>
-    <link rel="stylesheet" href="/Dulceria/Devops/css/styles.css">
+    <link rel="stylesheet" href="/Dulceria_Equipo5/Devops/css/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/Dulceria/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
+            <img src="/Dulceria_Equipo5/Devops/src/tt.png" alt="Dulce Tentación" height="100" width="150">
         </div>
         <nav>
             <ul>   
