--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
     <title>Dulce Tentación - Inicio</title>
     <link rel="stylesheet" href="/Dulceria_Equipo5/Devops/css/styles.css">
+    <link rel="stylesheet" href="/Dulceria_Equipo5/Devops/css/carousel.css"> <!-- Enlace al CSS del carrusel -->
 </head>
 <body>
     <header>
@@ -23,14 +23,38 @@
         </nav>
     </header>
 
-   
     <section class="hero">
         <div style="text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size:xx-large ;">Bienvenidos a Dulce Tentacion</div><br>
         <div style="text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">¡El paraíso de los dulces!</div>
     </section>
 
+    <!-- Carrusel de Sucursales -->
+    <section class="carousel-section">
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="/Dulceria_Equipo5/Devops/src/sucursal1.jpg" alt="Sucursal 1">
+                    <a href="https://ejemplo.com/sucursal1" class="footprint">Sucursal 1</a>
+                </div>
+                <div class="carousel-item">
+                    <img src="/Dulceria_Equipo5/Devops/src/sucursal2.jpg" alt="Sucursal 2">
+                    <a href="https://ejemplo.com/sucursal2" class="footprint">Sucursal 2</a>
+                </div>
+                <div class="carousel-item">
+                    <img src="/Dulceria_Equipo5/Devops/src/sucursal3.jpg" alt="Sucursal 3">
+                    <a href="https://ejemplo.com/sucursal3" class="footprint">Sucursal 3</a>
+                </div>
+            </div>
+            <!-- Flechas de navegación -->
+            <button class="carousel-control prev">&#10094;</button> <!-- Flecha izquierda -->
+            <button class="carousel-control next">&#10095;</button> <!-- Flecha derecha -->
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2025 Dulce Tentación. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="/Dulceria_Equipo5/Devops/js/carousel.js"></script> <!-- Enlace al JS del carrusel -->
 </body>
 </html>
