se realiza ajuste de imagenes

--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -34,15 +34,15 @@
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="/Dulceria_Equipo5/Devops/src/sucursal1.jpg" alt="Sucursal 1">
-                    <a href="https://ejemplo.com/sucursal1" class="footprint">Sucursal 1</a>
+                    <a href="https://maps.app.goo.gl/yDzPzpDKGmbnDUbX9" class="footprint">Sucursal 1</a>
                 </div>
                 <div class="carousel-item">
                     <img src="/Dulceria_Equipo5/Devops/src/sucursal2.jpg" alt="Sucursal 2">
-                    <a href="https://ejemplo.com/sucursal2" class="footprint">Sucursal 2</a>
+                    <a href="https://maps.app.goo.gl/5KTPw3qPYawriz1r6" class="footprint">Sucursal 2</a>
                 </div>
                 <div class="carousel-item">
                     <img src="/Dulceria_Equipo5/Devops/src/sucursal3.jpg" alt="Sucursal 3">
-                    <a href="https://ejemplo.com/sucursal3" class="footprint">Sucursal 3</a>
+                    <a href="https://maps.app.goo.gl/EX6ENcgGiieGKYUN9" class="footprint">Sucursal 3</a>
                 </div>
             </div>
             <!-- Flechas de navegación -->
