Se agrega funcion carousel

--- a/Devops/html/index.html
+++ b/Devops/html/index.html
@@ -41,7 +41,7 @@
                     <a href="https://maps.app.goo.gl/5KTPw3qPYawriz1r6" class="footprint">Sucursal 2</a>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Dulceria_Equipo5/Devops/src/sucursal3.jpg" alt="Sucursal 3">
+                    <img src="/Dulceria_Equipo5/Devops/src/sucursal3.png" alt="Sucursal 3">
                     <a href="https://maps.app.goo.gl/EX6ENcgGiieGKYUN9" class="footprint">Sucursal 3</a>
                 </div>
             </div>
