--- a/Devops/html/contact.html
+++ b/Devops/html/contact.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="about.html">Sobre Nosotros</a></li>
                 <li><a href="products.html">Productos</a></li>
                 <li><a href="gallery.html">Galería</a></li>
