--- a/Devops/html/about.html
+++ b/Devops/html/about.html
@@ -10,7 +10,7 @@
 <body>  
     <header>
         <div class="logo">
-            <img src="/Dulceria_Equipo5/Devops/src/logo.jpeg" alt="Logo de Dulce Tentación" height="100" width="150">
+            <img src="/Dulceria_Equipo5/Devops/src/tt.png" alt="Logo de Dulce Tentación" height="100" width="150">
         </div>
         <nav>
             <ul>
@@ -51,11 +51,6 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 Dulce Tentación. Todos los derechos reservados.</p>
-            <ul class="social-links">
-                <li><a href="https://facebook.com" target="_blank" aria-label="Facebook">Facebook</a></li>
-                <li><a href="https://instagram.com" target="_blank" aria-label="Instagram">Instagram</a></li>
-                <li><a href="https://twitter.com" target="_blank" aria-label="Twitter">Twitter</a></li>
-            </ul>
         </div>
     </footer>
 </body>
